<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_background"
    android:transitionName="constraintLayout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_setCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_setting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingcalendar_date"
                android:textColor="@color/colortxtgreen"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/txt_setDate"
                android:layout_marginTop="150dp">
            </TextView>


            <TextView
                android:id="@+id/txt_setting_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingcalendar_time"
                android:textColor="@color/colortxtgreen"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/txt_setDate"
                app:layout_constraintLeft_toLeftOf="@+id/txt_setDate"

                android:layout_marginTop="35dp">
            </TextView>

            <TextView
                android:id="@+id/txt_setting_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingcalendar_address"
                android:textColor="@color/colortxtgreen"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/txt_setTime"
                app:layout_constraintLeft_toLeftOf="@+id/txt_setDate"
                android:layout_marginTop="35dp">
            </TextView>

            <TextView
                android:id="@+id/txt_setTime"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_corner_green"
                app:layout_constraintTop_toBottomOf="@id/txt_setting_time"
                app:layout_constraintLeft_toLeftOf="@id/txt_setting_time"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/colortxtgreen"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/edittxt_setAddress"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_corner_green"
                app:layout_constraintTop_toBottomOf="@id/txt_setting_address"
                app:layout_constraintLeft_toLeftOf="@id/txt_setting_address"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/colortxtgreen"
                android:singleLine="true"/>


            <TextView
                android:id="@+id/txt_setDate"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_corner_green"
                app:layout_constraintTop_toBottomOf="@id/txt_setting_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/colortxtgreen"
                />

            <Button
                android:id="@+id/but_setting_affirm"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_green_to_deepgreen_color2"
                app:layout_constraintTop_toBottomOf="@id/edittxt_setAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/settingcalendar_affirm"
                android:textColorHint="@color/cardview_dark_background"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>