<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1_homepage"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:background="@color/transformwhite"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <TextView
                android:id="@+id/txt_homepage_card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/homepage_alert"
                android:textColor="@color/homepage_deepgreen"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card1_constrant2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/txt_homepage_card1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecylerView_homepage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/homepage_background_transfromgreen"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/txt_homepage_isEmpty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:alpha="0"
                    android:text="@string/setCalendar"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview3_homepage"
        android:layout_width="369dp"
        android:layout_height="154dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview2_homepage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pic_card_background">

            <TextView
                android:id="@+id/txt_homepage_card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/homepage_card2_txt1"
                android:textColor="@color/homepage_lightgreen"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_homepage_card3_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/homepage_card3_txt2"
                android:textColor="@color/homepage_lightgreen"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_homepage_card3" />

            <ImageView
                android:id="@+id/img_card3"
                android:layout_width="73dp"
                android:layout_height="110dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/pic_paint2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/homepage_line"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@color/homepage_linegreen"
        app:layout_constraintBottom_toTopOf="@id/cardview2_homepage"
        app:layout_constraintLeft_toLeftOf="@id/cardview2_homepage"
        app:layout_constraintTop_toBottomOf="@+id/cardview1_homepage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2_homepage"
        android:layout_width="369dp"
        android:layout_height="154dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pic_card_background">

            <TextView
                android:id="@+id/txt_homepage_card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/homepage_card2_txt1"
                android:textColor="@color/homepage_lightgreen"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_homepage_card2_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/homepage_card2_txt2"
                android:textColor="@color/homepage_lightgreen"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_homepage_card2" />

            <ImageView
                android:id="@+id/img_card2"
                android:layout_width="73dp"
                android:layout_height="110dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/pic_paint1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>